manifests/ingress/ingress-es.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: es
  namespace: lab
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - es.__HOST_IP__.sslip.io
      secretName: es-kibana-tls
  rules:
    - host: es.__HOST_IP__.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elasticsearch-es-http
                port:
                  number: 9200
